--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -83,6 +83,11 @@ ul.scroll-nav {
   padding: 4rem;
 }
 
+.button-wrapper {
+  text-align: center;
+  min-height: 30px;
+}
+
 /********************************************************
  *                    UI ELEMENTS                       *
  ********************************************************/
